--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,11 @@
 <body>
     <h1>Control de Luces LED</h1>
 
-    <button onclick="controlLed('red')">Encender Rojo</button>
-    <button onclick="controlLed('green')">Encender Verde</button>
-    <button onclick="controlLed('blue')">Encender Azul</button>
-    <button onclick="controlLed('white')">Encender Blanco</button>
-    <button onclick="controlLed('off')">Apagar Luces</button>
+    <button onclick="controlLed('R')">Encender Rojo</button>
+    <button onclick="controlLed('G')">Encender Verde</button>
+    <button onclick="controlLed('B')">Encender Azul</button>
+    <button onclick="controlLed('W')">Encender Blanco</button>
+    <button onclick="controlLed('O')">Apagar Luces</button>
 
     <script>
         function controlLed(color) {
